@@ -3,6 +3,9 @@
 This file documents user visible changes between versions of StumpWM
 
 * Changes since 0.9.2
+** New command bind
+Hang a key binding off the escape key.
+
 ** C-t TAB changed to fnext
 Maintain compatibility with the screen binding.
 
